--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,20 @@
 {
   "name": "Alpha-Z",
-  "short_name": "AlphaZ",
-  "start_url": "./index.html",
+  "short_name": "Alpha-Z",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#3e2723",
-  "theme_color": "#3e2723",
+  "background_color": "#121212",
+  "theme_color": "#f1c40f",
   "icons": [
     {
-      "src": "assets/icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "orientation": "portrait"
+  ]
 }
